--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -2,10 +2,10 @@
 GLOBALS CLASSES 
 -------------------------------------------------*/
 *{padding:0; margin:0;}
-body{font-family:"Trebuchet MS"; font-size:15px; color:#000000; background:url(../images/bg1.jpg);}
+body{font-family:"Trebuchet MS"; font-size:17px; color:#000000; background:url(../images/bg1.jpg);}
 img{border:none;}
-h1{ font-family:"Trebuchet MS"; font-size:22px; font-weight:normal;}
-h2{ font-family:"Trebuchet MS"; font-size:18px; font-weight:normal;}
+h1{ font-family:"Trebuchet MS"; font-size:24px; font-weight:normal; color:#ffffff}
+h2{ font-family:"Trebuchet MS"; font-size:20px; font-weight:normal;}
 P{ line-height:20px;}
 a{text-decoration:none; color:#ffed71;}
 a:hover{color:#ffffff;}
@@ -61,17 +61,7 @@ BOX CLASSES
 .box{ width:300px; overflow:hidden; float:left;}
 .box .panel .title{ background:url(../images/line-bg.jpg) repeat-x bottom; padding-bottom:25px; margin-bottom:25px;}
 .box .panel .title span{ float:left; margin-right:12px;}
-.box .panel .title h1{ color:#ffffff; font-weight:normal;}
-/*-------------------------------------------------
-WRAP2 CLASSES
--------------------------------------------------*/
-.wrap2{ width:880px; height:75px; margin:0 auto; overflow:hidden; background:url(../images/box-bg.png) no-repeat; margin-top:60px; margin-bottom:60px; padding:40px 40px;}
-.wrap2 .content{ width:500px; float:left;}
-.icon{ float:left; width:35px; height:60px; margin-right:25px;}
-.wrap2 h1{ color:#001325;}
-.wrap2 .button{ float:right; display:block;}
-.wrap2 .button a{background:url(../images/box-bg2.png) no-repeat;  width:220px; height:60px; font-size:26px; line-height:60px; text-transform:uppercase; padding-left:40px;}
-.wrap2 .button a:hover{ width:220px; height:60px; padding-left:40px; background:url(../images/box-bg2hover.png) no-repeat; color:#ec3600;}
+.box .panel .title h1{ color:#FFFFFF; font-weight:normal;}
 
 /*-------------------------------------------------
 WRAP3 CLASSES
@@ -89,8 +79,6 @@ WRAP3 CLASSES
 .wrap3 .panel .content ul li{ list-style:none; background:url(../images/line-bg.jpg) repeat-x bottom; line-height:38px;}
 .wrap3 .panel .content ul li a{ text-decoration:none; color:#ffffff;}
 .wrap3 .panel .content ul li a:hover{color:#ffed71;}
-
-
 
 /*-------------------------------------------------
 AMINO CLASSES
@@ -159,4 +147,47 @@ h1 {
 /* The "show" class is added to the filtered elements */
 .show {
   display: block;
+}
+
+/*-------------------------------------------------
+HIGHCHART CLASSES
+-------------------------------------------------*/
+
+.highcharts-figure, .highcharts-data-table table {
+    min-width: 310px;
+    max-width: 800px;
+    margin: 1em auto;
+}
+
+.highcharts-data-table table {
+    font-family: Verdana, sans-serif;
+    border-collapse: collapse;
+    border: 1px solid #EBEBEB;
+    margin: 10px auto;
+    text-align: center;
+    width: 100%;
+    max-width: 500px;
+}
+
+.highcharts-data-table caption {
+    padding: 1em 0;
+    font-size: 1.2em;
+    color: #555;
+}
+
+.highcharts-data-table th {
+    font-weight: 600;
+    padding: 0.5em;
+}
+
+.highcharts-data-table td, .highcharts-data-table th, .highcharts-data-table caption {
+    padding: 0.5em;
+}
+
+.highcharts-data-table thead tr, .highcharts-data-table tr:nth-child(even) {
+    background: #f8f8f8;
+}
+
+.highcharts-data-table tr:hover {
+    background: #f1f7ff;
 }
