--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -9,6 +9,8 @@ h2{ font-family:"Trebuchet MS"; font-size:20px; font-weight:normal;}
 P{ line-height:20px;}
 a{text-decoration:none; color:#ffed71;}
 a:hover{color:#ffffff;}
+html {height: 101%;}
+
 /*-------------------------------------------------
 GENERAL CLASSES
 -------------------------------------------------*/
@@ -17,15 +19,13 @@ GENERAL CLASSES
 .marTop30{margin-top:30px;}
 .marTop40{margin-top:40px;}
 .marRight30{margin-right:30px;}
-.bg-bottom{ background:none bottom !important;}
+.bg-bottom{ background:none}
 .panel{}
 .title{}
 .content{}
-.button a{ text-decoration:none; background:url(../images/btn-bg.png) no-repeat; width:90px; height:30px; text-align:center; line-height:30px; display:block;}
-.button a:hover{background:url(../images/btn-bghover.png) no-repeat; color:#04192f;}
 .page-wrap{ width:960px; margin:0 auto; overflow:hidden;}
 .wrap{ width:960px; margin:0 auto; overflow:hidden;}
-.input-newsletter{ background:url(../images/newsletter-bg.png) no-repeat center; width:210px; height:46px; border:none; text-indent:10px; color:#fff;font-family:"Trebuchet MS"; font-size:14px;}
+.html{overflow-y:scroll;}
 
 
 /*-------------------------------------------------
@@ -39,7 +39,6 @@ HEADER CLASSES
 MENU CLASSES
 -------------------------------------------------*/
 .menu-wrap{ overflow:hidden; margin:25px auto 30px auto; width:960px;}
-.menu{ float:left; width:660px;}
 .menu ul li{ list-style:none; float:left; width:100px; text-align:center; line-height:40px; margin-right:20px;}
 .menu ul li a{ text-decoration:none; font-size:15px; font-weight:bold; text-transform:uppercase; text-align:center; display:block; color:#000000;}
 .menu ul li a:hover{ color:#ffffff;  background:url(../images/menu-btn.png) no-repeat;}
@@ -84,31 +83,6 @@ WRAP3 CLASSES
 AMINO CLASSES
 -------------------------------------------------*/
 
-* {
-  box-sizing: border-box;
-}
-
-.btn {
-  border: none;
-  outline: none;
-  padding: 12px 16px;
-  background-color: white;
-  cursor: pointer;
-}
-
-.btn:hover {
-  background-color: #ddd;
-}
-
-.btn.active {
-  background-color: #666;
-  color: white;
-}
-/* Center website */
-.main {
-  max-width: 1000px;
-  margin: auto;
-}
 
 h1 {
   font-size: 20px;
@@ -116,38 +90,21 @@ h1 {
 }
 
 .row {
-  margin: 10px -16px;
+    display: flex;
 }
 
-/* Add padding BETWEEN each column */
-.row,
-.row > .column {
-  padding: 8px;
-}
-
-/* Create four equal columns that floats next to each other */
 .column {
-  float: left;
-  width: 25%;
-  display: none; /* Hide all elements by default */
+    flex: 25%;
+    padding: 5px;
 }
 
-/* Clear floats after rows */ 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
 
 /* Content */
 .content {
   background-color: white;
-  padding: 10px;
+  padding: 5px;
 }
-/* The "show" class is added to the filtered elements */
-.show {
-  display: block;
-}
+
 
 /*-------------------------------------------------
 HIGHCHART CLASSES
